--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "papaparse": "^5.3.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-gtm-module": "^2.0.11",
     "rss-parser": "^3.12.0",
     "sass": "^1.32.8",
     "webpack": "^5.23.0"
