--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-gtm-module": "^2.0.11",
+    "react-onesignal": "^1.7.0",
     "rss-parser": "^3.12.0",
     "sass": "^1.32.8",
     "webpack": "^5.23.0"
