--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-onesignal": "^1.7.0",
     "rss-parser": "^3.12.0",
     "sass": "^1.32.8",
+    "sitemap": "^6.4.0",
     "web-social-share": "^7.1.0",
     "webpack": "^5.23.0"
   }
