--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-dom": "^17.0.1",
     "react-gtm-module": "^2.0.11",
     "react-onesignal": "^1.7.0",
+    "request-promise-core": "^1.1.4",
     "rss-parser": "^3.12.0",
     "sass": "^1.32.8",
     "sitemap": "^6.4.0",
