--- a/package.json
+++ b/package.json
@@ -19,11 +19,14 @@
     "react-adsense": "^0.1.0",
     "react-dom": "^17.0.1",
     "react-gtm-module": "^2.0.11",
+    "react-lazy-load-image-component": "^1.5.1",
     "react-onesignal": "^1.7.0",
     "request-promise-core": "^1.1.4",
     "rss-parser": "^3.12.0",
     "sass": "^1.32.8",
+    "sharp": "^0.28.3",
     "sitemap": "^6.4.0",
+    "slug": "^5.1.0",
     "web-social-share": "^7.1.0",
     "webpack": "^5.23.0"
   }
