--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "sharp": "^0.28.3",
     "sitemap": "^6.4.0",
     "slug": "^5.1.0",
+    "slugify": "^1.6.6",
     "web-social-share": "^7.1.0",
     "webpack": "^5.23.0"
   }
