--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "start": "next start"
+    "start": "npm start",
+    "postbuild": "next-sitemap --config awesome.config.js"
   },
   "dependencies": {
     "axios": "^0.21.1",
@@ -25,7 +26,6 @@
     "rss-parser": "^3.12.0",
     "sass": "^1.32.8",
     "sharp": "^0.28.3",
-    "sitemap": "^6.4.0",
     "slug": "^5.1.0",
     "slugify": "^1.6.6",
     "web-social-share": "^7.1.0",
