--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-gtm-module": "^2.0.11",
     "react-lazy-load-image-component": "^1.5.1",
     "react-onesignal": "^1.7.0",
+    "react-scripts": "^3.4.0",
     "request-promise-core": "^1.1.4",
     "rss-parser": "^3.12.0",
     "sass": "^1.32.8",
