--- a/package.json
+++ b/package.json
@@ -13,11 +13,11 @@
     "isomorphic-fetch": "^3.0.0",
     "lodash": "^4.17.20",
     "moment": "^2.29.1",
-    "next": "^10.0.7",
+    "next": "14.1.0",
     "papaparse": "^5.3.0",
-    "react": "^17.0.1",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
     "react-adsense": "^0.1.0",
-    "react-dom": "^17.0.1",
     "react-gtm-module": "^2.0.11",
     "react-lazy-load-image-component": "^1.5.1",
     "react-onesignal": "^1.7.0",
